@@ -14,6 +14,7 @@ Version 0.16 - 2011-XX-XX
  * Standalone recordings can be tagged with relationships now. (PICARD-10)
  * Refreshing an album will refresh its "other versions" listing. (PICARD-8)
  * "Unicode punctuation to ASCII" now works on album-level metadata. (PICARD-50)
+ * DJ-mix tags should only be written to the medium where they apply. (PICARD-20)
 
 Version 0.15.1 - 2011-07-31
  * "Other versions" menu now displays release labels and catalog numbers.
